poke/testsuite/poke.pkl/map-diag-1.pk
/* { dg-do compile } */

deftype AFunc = (any,any)int;

AFunc @ 0#B; /* { dg-error "" } */
